# poc-InsuranceVoiceToForm

./: .gitignore  README.md  pyproject.toml  📝 Project Insurance Voice-to-Form (IVF).md
scripts/: seed_data.py
src/api/: app.py  routes.py  routes_dossiers.py
src/api/static/: index.html
src/core/: config.py  interfaces.py  models.py
src/db/: database.py
src/providers/: llm_extractor.py  llm_ollama.py  nlp_extractor.py  stt_parakeet.py
src/utils/: audio.py
tests/: test_api.py  test_llm_extractor.py  test_models.py  test_nlp_extractor.py
tests/fixtures/: transcripts.py
